WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131779
On iOS keep network process running using a process assertion rather than a boost
https://bugs.webkit.org/show_bug.cgi?id=131779
Summary
On iOS keep network process running using a process assertion rather than a b...
Gavin Barraclough
Reported
2014-04-16 17:41:25 PDT
.
Attachments
Fix
(17.22 KB, patch)
2014-04-16 17:47 PDT
,
Gavin Barraclough
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2014-04-16 17:47:15 PDT
Created
attachment 229507
[details]
Fix
WebKit Commit Bot
Comment 2
2014-04-16 17:49:22 PDT
Attachment 229507
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/ProcessAssertion.mm:40: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 3
2014-04-16 18:04:23 PDT
Comment on
attachment 229507
[details]
Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=229507&action=review
> Source/WebKit2/UIProcess/WebProcessProxy.h:225 > + std::unique_ptr<ProcessAssertion> m_assertion;
Let's move this guy to ChildProcessProxy.
> Source/WebKit2/UIProcess/ios/ProcessAssertion.h:39 > + enum State {
typed enum?
> Source/WebKit2/UIProcess/ios/ProcessAssertion.mm:36 > +const BKSProcessAssertionFlags BackgroundTabFlags = (BKSProcessAssertionAllowIdleSleep); > +const BKSProcessAssertionFlags ForegroundTabFlags = (BKSProcessAssertionAllowIdleSleep | BKSProcessAssertionPreventTaskSuspend | BKSProcessAssertionAllowSuspendOnSleep | BKSProcessAssertionWantsForegroundResourcePriority | BKSProcessAssertionPreventTaskThrottleDown);
Lowercase first letter for variable names. We'll probably need something configurable for BKSProcessAssertionPreventTaskThrottleDown on the WebProcess.
> Source/WebKit2/UIProcess/ios/ProcessAssertion.mm:59 > + m_assertionState = assertionState;
Let's assign this before the out call in case some delegate cause us to re-enter.
Gavin Barraclough
Comment 4
2014-04-16 18:40:35 PDT
Transmitting file data ......... Committed revision 167410.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug