On iOS keep network process running using a process assertion rather than a boost https://bugs.webkit.org/show_bug.cgi?id=131779

Reviewed by Benjamin Poulain.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::connectToService):
    - No need to leak a boost onto the NetworkProcess on iOS.
* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::didFinishLaunching):
    - Take a ProcessAssertion on the NetworkProcess.
* UIProcess/Shared/ChildProcessProxy.h:
    - Added m_assertion.
* UIProcess/WebProcessProxy.h:
    - Removed m_assertion.
* UIProcess/ios/ProcessAssertion.h: Added.
    - Added - refactored from WebProcessProxy.h.
* UIProcess/ios/ProcessAssertion.mm: Added.
(WebKit::ProcessAssertion::ProcessAssertion):
(WebKit::ProcessAssertion::setState):
    - Added - refactored from WebProcessProxyIOS.mm.
* UIProcess/ios/WebProcessProxyIOS.mm:
(WebKit::WebProcessProxy::updateProcessState):
    - Code refactored out to ProcessAssertion.mm.
* WebKit2.xcodeproj/project.pbxproj:
    - Added files.



Canonical link: https://commits.webkit.org/149844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167410 268f45cc-cd09-0410-ab3c-d52691b4dbfc