Source/WebKit2/Shared/ChildProcessProxy.h
@@ -32,6 +32,10 @@
 
 #include <wtf/ThreadSafeRefCounted.h>
 
+#if PLATFORM(IOS) && USE(XPC_SERVICES)
+#include "ProcessAssertion.h"
+#endif
+
 namespace WebKit {
 
 class ChildProcessProxy : ProcessLauncher::Client, public IPC::Connection::Client, public ThreadSafeRefCounted<ChildProcessProxy> {
@@ -81,7 +85,11 @@ protected:
 
     bool dispatchMessage(IPC::Connection*, IPC::MessageDecoder&);
     bool dispatchSyncMessage(IPC::Connection*, IPC::MessageDecoder&, std::unique_ptr<IPC::MessageEncoder>&);
-
+    
+#if PLATFORM(IOS) && USE(XPC_SERVICES)
+    std::unique_ptr<ProcessAssertion> m_assertion;
+#endif
+    
 private:
     virtual void getLaunchOptions(ProcessLauncher::LaunchOptions&) = 0;
     virtual void connectionWillOpen(IPC::Connection*);
